# Quantitative-Options_Strategies

./: .gitignore  LICENSE  README.md  pyproject.toml  start.py  straddles_meta.json
.runtime/: automation_state.json  execution_ledger.json  execution_quality_snapshot.json  ml_alpha_snapshot.json  portfolio_risk_guard.json  preflight_state.json  risk_snapshot.json  system_resource_snapshot.json
config/: adaptive_profile.json  brain_weights.pth  correlation_alpha_model.pkl  foundry_last_model_config.json  hmm_macro_model.pkl  hmm_model.pkl  model_state.json  params.py  quant_strategy_pack.json  regime_movement_models.pkl  symbol_list.txt  volatile_symbols.txt
core/: adaptive_recalibration.py  broker_client.py  cli_args.py  delay_aware_options.py  earnings.py  equity_overlay.py  execution.py  execution_ledger.py  execution_quality.py  greeks_targeting.py  manager.py  market_intelligence.py  mega_neural_brain.py  ml_alpha.py  movement_predictor.py  neural_brain.py  notifications.py  operations_reporting.py  order_monitor.py  pairs_trading.py  portfolio_optimizer.py  portfolio_risk.py  quant_models.py  regime_detection.py  resource_profile.py  runtime_calibration.py  runtime_env.py  sentiment.py  signal_fusion.py  state_manager.py  strategy.py  strategy_regime.py  system_preflight.py  system_telemetry.py  terminal_ui.py  test.txt  test_gpu.py  torch_device.py  universe_maintenance.py  utils.py
docs/: OPERATIONS_GUIDE.md
logging/: __init__.py  logger_setup.py  strategy_logger.py
models/: contract.py
reports/: daily_model_maintenance_report.json  (+4 more)
(+54 files in other folders)
