[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "options-wheel"
version = "0.1.0"
description = "A model-driven automated options strategy stack."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "python-dotenv",
    "pandas>=1.5",
    "numpy>=1.23",
    "requests>=2.28",
    "alpaca-py",
    "yfinance",
    "torch",
    "scikit-learn",
    "hmmlearn",
    "joblib"
]

[project.scripts]
run-strategy = "scripts.run_strategy:main"
weekend-recalibrate = "scripts.weekend_recalibration:main"
backtest-movement = "scripts.backtest_movement_predictor:main"
massive-backtest = "scripts.massive_backtest_engine:main"
quant-foundry = "scripts.quant_research_foundry:main"
automate-stack = "scripts.automation_controller:main"
# (optional) lets users run strategy/recalibration from CLI

[tool.setuptools.packages.find]
where = ["."]
exclude = ["archive"]
